Pakete Einfügen von mathrsfs (Schrift) und hyperref (Links)

--- a/Tex/masterarbeit.tex
+++ b/Tex/masterarbeit.tex
@@ -15,12 +15,14 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{dsfont}
+\usepackage{mathrsfs} % rsfs fonts in math mode
 \usepackage{float}
 \usepackage{multirow}
 % Grafiken/Abbildungen
 \usepackage{graphicx} 
 \usepackage{subcaption}
 \usepackage{pdflscape}
+\usepackage{hyperref}
 
 % Bunter Text
 \usepackage{xcolor}
