Einheitliche Label Vereinheitlichung von Labeln (kebab case)

--- a/Tex/masterarbeit.tex
+++ b/Tex/masterarbeit.tex
@@ -100,13 +100,13 @@ was innovative in the sense that endogenously created asymmetric information lea
 and without endogenous product choice even when firms are symmetric ex ante. The asymmetry in equlibrium depends on the foward-looking
 tendency of firms (positive discount factor for the future). \textcolor{red}{Siehe Content-Reiter Citavi}
 
-\subsection{Price Differentiation} \label{ssec:pricediff}
+\subsection{Price Differentiation} \label{ssec:price-diff}
 Types of price discrimination
 %
 \subsection{Spatial Competition}
 Mostly Hotelling (incl. impossibility result $\to$ relevance for Choe) and maybe also the circle (see Belleflamme)
 %
-\section{\citet{Choe.2018}: BBPD and Spatial Competition in a Dynamic Context} \label{sec:choe_2018_intro}
+\section{\citet{Choe.2018}: BBPD and Spatial Competition in a Dynamic Context} \label{sec:choe-2018-intro}
 %
 This section provides an introduction to the model presented in \citet{Choe.2018}. The present a model that combines
 behaviour-based price discrimination with spatial competition. A brief overview of the model is followed by a thorough
