Choe et al: Related Literature (tbd) Eventuell wird basieren auf dieser Aufzählung verwandte Literatur zu Choe et al ein eigener Abschnitt

--- a/Tex/masterarbeit.tex
+++ b/Tex/masterarbeit.tex
@@ -130,9 +130,13 @@ positive discount factors. The discounting of future profits by firms ensures th
 intertemporal prefence for second-period profits, equilibria are symmetric irrespecive of consumers' discount factors.
 
 
-\subsection{Baseline Model}
-Firms are assumed to have constant marginal cost of production; this is~--~as commonly done in this strain of the literature~--~normalised to 0. By assumption, all consumers
-choose a firm from which they purchase one unit of good in the first period.
+\subsection{Related Literature (tbd)}
+\begin{itemize}
+	\item p. 5672: ``we abstract away from these issues mainly because our aim is to clearly understand how changes in informational assumptions lead to different equilibria
+	in otherwise the same model as Fudenberg and Tirole (2000)''
+	\item die Autoren nennen 3 Referenzmodelle, mit denen sie sich vergleichen (ua FT2000), ggf gibt es noch andere; die im Artikel genannten sind relativ alt
+\end{itemize}
+%
 \section{\citet{Armstrong.2019}: Discriminating Against Captive Consumers}
 %
 \subsection{Captive Consumers~--~Consumer Myopia}
