Redaktionelle Änderungen/Linting

--- a/Tex/masterarbeit.tex
+++ b/Tex/masterarbeit.tex
@@ -106,7 +106,7 @@ Types of price discrimination
 \subsection{Spatial Competition}
 Mostly Hotelling (incl. impossibility result $\to$ relevance for Choe) and maybe also the circle (see Belleflamme)
 %
-\section{\citet{Choe.2018}: BBPD and Spatial Competition in a Dynamic Context} \label{sec:choe-2018-intro}
+\section{\citet{Choe.2018}: BBPD and Spatial Competition in a Dynamic Model} \label{sec:choe-2018-intro}
 %
 This section provides an introduction to the model presented in \citet{Choe.2018}. The present a model that combines
 behaviour-based price discrimination with spatial competition. A brief overview of the model is followed by a thorough
@@ -134,7 +134,7 @@ symmetric irrespecive of consumers' discount factors.
 \subsection{Baseline Model} \label{sec:choe-baseline} % based on Section 2 of \citet{Choe.2018}
 The firm comprises two firms that compete in a Hotelling linear city with quadratic costs for location and consumers in a two-stage game
 with perods $\tau = 1,\,2$. Consumers are uniformly distributed on [0,\,1] where consumer $x$ is simply located at $x$.
-Consumers incur quadratic transportation costs. Firms have full knowledge of this setup. Furtermore, firms are assumed to have constant
+Consumers incur quadratic transportation costs. Firms have full knowledge of this setup. Furthermore, firms are assumed to have constant
 marginal cost of production; this is~--~as is common in this strain of the literature~--~normalised to 0. Over the course of the game,
 firms gather information and engage in price discrimination against consumers. Consumers are price takers and simply act as a source of
 demand without having any notable actions to chose from.
@@ -158,11 +158,12 @@ $n > 3$ competing firms, setting an efficient poaching price would likely be a m
 The pricing strategies available to firm $i$ in period $\tau=2$ are determined by the informational asymmetries that result from the outcome
 of the location game. \citet[p. 5672]{Choe.2018} let firms set two different types of prices in period $\tau=2$. Based on the private
 information obatained in $\tau=1$, firms engage in price discrimination in two disctinct ways. They\footnote{For brevity I assume the perspective
-of firm $A$ in the following description.} discriminate \textit{between} first-period customers (all $x\in\mathscr{A}$) and consumers that chose
-the competitor (all $x\notin\mathscr{A}$, i.e. all $x\in\mathscr{B}$ since the authors assume a duopoly) but also \textit{within} $\mathscr{A}$.
-Firms set a uniform poaching price, e.g. $P_A(\mathscr{B})$, aimed at all consumers who chose their competitor in the first period and an
-individualised price, e.g. $P_A(x)$. The poaching price is designed to incentivise consumers to switch to another firm in $\tau=2$ while the
-individualised pricing schedule is designed to appropriate the highest possible surplus based on the information obtained in the first period.
+of firm $A$ in the following description of price setting.} discriminate \textit{between} first-period customers (all $x\in\mathscr{A}$)
+and consumers that chose the competitor (all $x\notin\mathscr{A}$, i.e. all $x\in\mathscr{B}$ since the authors assume a duopoly) but also
+\textit{within} $\mathscr{A}$. Firms set a uniform poaching price, e.g. $P_A(\mathscr{B})$, aimed at all consumers who chose their competitor
+in the first period and an individualised price, e.g. $P_A(x)$. The poaching price is designed to incentivise consumers to switch to another
+firm in $\tau=2$ while the individualised pricing schedule is designed to appropriate the highest possible surplus based on the information
+obtained in the first period.
 However, each consumer chooses among their personsalised price and the two poaching prices. Note that the uniform poaching price can be viewed
 as primarily a function of set membership, while the individualised price offered to a given customer $x\in\mathscr{A}$ is a function of their
 specific location along the [0,\,1]-line \textcolor{red}{Mit oder ohne Bindestrich?}.
