Erweiterung der Abatzskizze (Related Lit.)

--- a/Tex/masterarbeit.tex
+++ b/Tex/masterarbeit.tex
@@ -208,6 +208,8 @@ from the assupmtion of a single discount factor $\delta_c$.}
 	\item p. 5672: ``we abstract away from these issues mainly because our aim is to clearly understand how changes in informational assumptions lead to different equilibria
 	in otherwise the same model as Fudenberg and Tirole (2000)''
 	\item die Autoren nennen 3 Referenzmodelle, mit denen sie sich vergleichen (ua FT2000), ggf gibt es noch andere; die im Artikel genannten sind relativ alt
+	\item Ähnlichkeiten zu Armstrong/Vickers
+	\item Ähnlichkeiten zu add-on market: es scheint, als ließen sich die Konsumenten aus Choe mit variierenden Diskontfaktoren in die Agenten aus dem anderen Paper umbauen. Myopes wären dann sogar (fast?) identisch, da sie die zweite Periode (äqivalent zum Add-on price) ignorieren (nicht kennen); einziger Unterschied sind Transportkosten?
 \end{itemize}
 %
 \section{\citet{Armstrong.2019}: Discriminating Against Captive Consumers}
